# bazel_rust_cross

./: Cargo.toml  Dockerfile  MODULE.bazel  README.md  WORKSPACE  build_and_run.sh
bazel_rust_cross/: BUILD.bazel
utils/: build_docker.sh
