module(
    name = "bazel_rust_cross",
    repo_name = "bazel_rust_cross",
)

bazel_dep(name="platforms", version="0.0.8")

################################################################################
# Bazel Utilities ##############################################################
################################################################################

bazel_dep(name = "aspect_bazel_lib", version = "2.7.7", dev_dependency = True)

################################################################################
# Packaging Utilities ##########################################################
################################################################################

bazel_dep(name = "rules_pkg", version = "0.10.1")

################################################################################
# Rust #########################################################################
################################################################################

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_rust", version = "0.42.1")

archive_override(
    module_name = "rules_rust",
    integrity = "sha256-JLN47ZcAbx9wEr5Jiib4HduZATGLiDgK7oUi/fvotzU=",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.42.1/rules_rust-v0.42.1.tar.gz"],
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions=["1.78.0"],
    extra_target_triples = ["x86_64-unknown-linux-musl"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate_index = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")

crate_index.spec(package = "anyhow", version = "1")
crate_index.spec(package = "reqwest", version = "0.11.18", default_features=False, features = ["rustls-tls",  "gzip"])
crate_index.spec(package = "tokio", version = "1", features = ["full", "tracing"])

crate_index.from_specs(name = "crate_index")
use_repo(crate_index, "crate_index")
