load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "bazel_rust_cross",
    srcs = ["src/bin/main.rs"],
    deps = [
        "@crate_index//:anyhow",
        "@crate_index//:tokio",
        "@crate_index//:reqwest",
    ],
)

pkg_tar(
    name = "tar",
    srcs = [":bazel_rust_cross"],
)

platform_transition_filegroup(
    name = "linux_tarball",
    srcs = [":tar"],
    target_platform = ":linux_x86_64",
)

platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    visibility = ["//visibility:public"],
)
